#3-refactor: to list를 수정 문제로 collect(Collectors.toList())로 바꾸었다.